@@ -2,12 +2,14 @@ package com.trust.gestion.services;
 
 
 import com.trust.gestion.entities.BuildingOwnerEntity;
+import com.trust.gestion.entities.PersonEntity;
 import com.trust.gestion.exception.NoSuchElementFoundException;
 import com.trust.gestion.domain.OwnerDto;
 import com.trust.gestion.entities.BuildingEntity;
 import com.trust.gestion.entities.OwnerBuildingLinkEntity;
 import com.trust.gestion.entities.OwnerEntity;
 import com.trust.gestion.handlers.OwnerHandler;
+import com.trust.gestion.mappers.OwnerMapper;
 import com.trust.gestion.mappers.OwnerMapperImpl;
 import com.trust.gestion.pages.OwnerLinkResponse;
 import com.trust.gestion.pages.PageResponse;
@@ -16,8 +18,10 @@ import com.trust.gestion.repositories.BuildingOwnerRepository;
 import com.trust.gestion.repositories.BuildingRepository;
 import com.trust.gestion.repositories.OwnerBuildingLinkRepository;
 import com.trust.gestion.repositories.OwnerRepository;
+import com.trust.gestion.repositories.PersonRepository;
 import com.trust.gestion.resources.OwnerLinkResource;
 import com.trust.gestion.resources.OwnerResource;
+import com.trust.gestion.resources.reponse.OwnerResponse;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.collections4.CollectionUtils;
@@ -26,6 +30,7 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
 
 import static java.util.Optional.empty;
@@ -39,24 +44,33 @@ public class OwnerService {
     private final OwnerPersistence persistence;
     private final OwnerBuildingLinkRepository linkRepository;
     private final BuildingOwnerRepository buildingOwnerRepository;
+    private final PersonRepository personRepository;
 
-    public PageResponse<OwnerDto> getById(String id) {
-
-        PageResponse<OwnerDto> pageResponse = new PageResponse<>();
-        return pageResponse.toBuilder().content(List.of(this.mapEntityToDto(this.findById(id)))).build();
+    public PageResponse<OwnerResponse> getById(String id) {
+        OwnerEntity entity = this.findById(id);
+        PersonEntity person = this.getPersonEntity(id);
+        OwnerMapper mapper = new OwnerMapperImpl();
+        PageResponse<OwnerResponse> pageResponse = new PageResponse<>();
+        return pageResponse.toBuilder().content(Collections.singletonList(mapper.toResponse(entity, person))).build();
 
     }
-    public PageResponse<OwnerDto> getAll(Integer page, Integer size){
-        Page<OwnerEntity> entities = this.repository.findAll(PageRequest.of(page, size));
-        return (new PageResponse<OwnerDto>()).toBuilder()
-                .content(entities.getContent().stream().map(this::mapEntityToDto).toList())
-                .totalPages(entities.getTotalPages())
-                .totalElements(entities.getTotalElements())
-                .size(entities.getSize())
-                .number(entities.getNumber())
+    public PageResponse<OwnerResponse> getAll(Integer page, Integer size){
+        OwnerMapper mapper = new OwnerMapperImpl();
+        Page<OwnerEntity> pages = this.repository.findAll(PageRequest.of(page, size));
+        List<OwnerResponse> content = pages.getContent()
+                .stream()
+                .map(entity -> mapper.toResponse(entity, this.getPersonEntity(entity.getId())))
+                .toList();
+        return (new PageResponse<OwnerResponse>()).toBuilder()
+                .content(content)
+                .totalPages(pages.getTotalPages())
+                .totalElements(pages.getTotalElements())
+                .size(pages.getSize())
+                .number(pages.getNumber())
                 .build();
 
     }
+
 
     public void create(OwnerResource resource) {
         BuildingEntity building = this.findBuildingById(resource.getBuildingId());
@@ -64,13 +78,26 @@ public class OwnerService {
         OwnerEntity entity = (new OwnerHandler()).ownerHandler(resource, empty());
         building.setAssigned(Boolean.TRUE);
         this.buildingRepository.save(building);
-        this.persistence.saved(entity);
+        PersonEntity person = this.getPerson(resource, entity.getId());
+        this.persistence.saved(entity, person);
+
 
         BuildingOwnerEntity buildingOwnerEntity = this.getBuildingOwnerEntity()
                 .owner(entity)
                 .building(building)
                 .build();
         this.buildingOwnerRepository.save(buildingOwnerEntity);
+    }
+    private PersonEntity getPerson(OwnerResource resource, String ownerId){
+        return PersonEntity.builder()
+                .id(ownerId)
+                .firstName(resource.getFirstName())
+                .middleName(resource.getMiddleName())
+                .lastName(resource.getLastName())
+                .gender(resource.getGender())
+                .registrationDate(Instant.now())
+                .lastUpdated(Instant.now())
+                .build();
     }
 
     public PageResponse<OwnerDto> update(String id, OwnerResource resource) {
@@ -122,8 +149,8 @@ public class OwnerService {
     private OwnerEntity findById(String id) {
         return this.repository.findById(id).orElseThrow(() -> new NoSuchElementFoundException("Owner not found"));
     }
-    private OwnerDto mapEntityToDto(OwnerEntity entity){
-        return (new OwnerMapperImpl()).toDto(entity);
+    private PersonEntity getPersonEntity(String id){
+        return this.personRepository.findById(id).orElseThrow(() -> new NoSuchElementFoundException("Person not found"));
     }
     private void validateBuilding(String id) {
         this.findBuildingById(id);
